--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.13.4",
     "lodash": "^4.9.0",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.12"
+    "mongoose": "^4.4.12",
+    "rxjs": "^5.0.0-beta.5",
+    "socket.io": "^1.4.5"
   }
 }
