--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.4.12",
     "rxjs": "^5.0.0-beta.5",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "ws": "^1.1.0"
   }
 }
